--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
   text-align: center;
   color: black;
-  font-family: 'Times New Roman', Times, serif,'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+  font-family: 'Times New Roman', Times, serif, 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', ;
 }
 
 body {
@@ -23,11 +23,32 @@ li {
   list-style-type: none;
 }
 
+aside img {
+  max-width: 60px;
+  display: block;
+  padding-right: 5px;
+}
+
+aside a {
+  font-size: 14px;
+  text-align: left;
+}
+
+.aside-elem {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+figure img {
+  max-width: 66%;
+}
+
 .lower-logo-bar {
   padding-top: 20px;
 }
 
-.lower-logo-bar img{
+.lower-logo-bar img {
   text-align: left;
 }
 
@@ -61,7 +82,7 @@ li {
   font-weight: bold;
 }
 
-.nav-last li{
+.nav-last li {
   display: inline;
   font-size: 13px;
 }
@@ -96,27 +117,6 @@ aside {
   margin-left: 1300px;
 }
 
-aside img {
-  max-width: 60px;
-  display: block;
-  padding-right: 5px;
-}
-
-aside a {
-  font-size: 14px;
-  text-align: left;
-}
-
-.aside-elem {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-}
-
-figure img {
-  max-width: 66%;
-}
-
 iframe {
   min-width: 600px;
   min-height: 360px;
@@ -133,16 +133,6 @@ figcaption {
   max-width: 700px;
   padding-right: 1000px;
 }
-
-h3 {
-  font-size: 20px;
-}
-
-h3, h5 {
-  text-align: left;
-  padding-left: 100px;
-}
-
 
 article, p {
   font-family: 'Times New Roman', Times, serif;
