--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
   text-align: center;
   color: black;
-  font-family: 'Times New Roman', Times, serif, 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', ;
+  font-family: 'Times New Roman', Times, serif, 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS' ;
 }
 
 body {
@@ -122,7 +122,7 @@ iframe {
   min-height: 360px;
 }
 
-figcaption {
+.youtube-caption {
   font-size: 16px;
   max-width: 600px;
   text-align: left;
@@ -134,7 +134,7 @@ figcaption {
   padding-right: 1000px;
 }
 
-article, p {
+p {
   font-family: 'Times New Roman', Times, serif;
 }
 
