--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
   text-align: center;
   color: black;
-  font-family: 'Times New Roman', Times, serif, 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS' ;
+  font-family: 'Times New Roman', Times, serif, 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS';
 }
 
 body {
@@ -42,6 +42,15 @@ aside a {
 
 figure img {
   max-width: 66%;
+}
+
+.guth-text {
+  line-height: 1.3;
+  text-align: left;
+  font-size: 17px;
+  padding-left: 16vw;
+  font-family: 'Times New Roman', Times, serif;
+  width: 1200px;
 }
 
 .lower-logo-bar {
@@ -134,6 +143,15 @@ iframe {
   padding-right: 1000px;
 }
 
+.telescope-caption {
+  line-height: 1;
+  text-align: left;
+  font-size: 14px;
+  padding-bottom: 15px;
+  font-family: 'Times New Roman', Times, serif;
+  width: 700px;
+}
+
 p {
   font-family: 'Times New Roman', Times, serif;
 }
@@ -183,13 +201,12 @@ footer {
   padding-top: 1px;
 }
 
-/*NAVBAR*/
 .topnav {
   display: inline;
   width: 200px;
 }
 
-.topleftnav img{
+.topleftnav img {
   margin-right: 15px;
 }
 
@@ -199,6 +216,7 @@ footer {
   align-content: space-between;
   padding-left: 6%;
 }
+
 .toprightnav {
   float: right;
   display: inline;
