--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,22 @@
   font-family: 'Times New Roman', Times, serif, 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS';
 }
 
+.flex {
+  display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+.float-right {
+  float: right;
+}
+
+.float-left {
+  float: left;
+}
+
 body {
   margin: 0;
   margin-top: 100px;
@@ -13,31 +29,53 @@ a {
   text-decoration: none;
 }
 
+a :hover{
+  text-decoration: initial;
+}
+
 hr {
   border: 0;
   border-top: 1px solid rgb(231, 229, 229);
   margin-bottom: 0;
 }
 
+.big-buttons {
+  height: 30px;
+  background-color: rgb(94, 103, 121);
+  color: white;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 12px;
+  padding: 0 30px;
+}
+
+.article-master {
+  justify-content: space-between;
+  width: 66%;
+  margin: 0 auto;
+}
+
+.article-buttons {
+  border: 1px solid black;
+  width: 250px;
+}
+
+.social-master {
+  justify-content: space-between;
+}
+
+.social {
+  padding: 0;
+  margin: 0;
+}
+
+.social-logo {
+  max-width: 25px;
+  padding-right: 10px;
+}
+
 li {
   list-style-type: none;
-}
-
-aside img {
-  max-width: 60px;
-  display: block;
-  padding-right: 5px;
-}
-
-aside a {
-  font-size: 14px;
-  text-align: left;
-}
-
-.aside-elem {
-  display: flex;
-  align-items: center;
-  padding: 10px;
 }
 
 figure img {
@@ -49,7 +87,7 @@ figure img {
   text-align: left;
   font-size: 17px;
   padding-left: 16vw;
-  width: 1200px;
+  width: 66%;
 }
 
 .lower-logo-bar {
@@ -61,7 +99,6 @@ figure img {
 }
 
 .low-nav-lists {
-  display: grid;
   grid-template-columns: auto auto auto auto auto auto;
   width: 1200px;
 }
@@ -108,12 +145,28 @@ h1 {
 }
 
 aside {
-  float: right;
   position: absolute;
   padding-left: 0;
   width: 250px;
   margin-top: 350px;
-  margin-left: 1300px;
+  margin-left: 75%;
+}
+
+aside img {
+  max-width: 60px;
+  display: block;
+  padding-right: 5px;
+}
+
+aside a {
+  font-size: 14px;
+  text-align: left;
+}
+
+.aside-elem {
+  display: flex;
+  align-items: center;
+  padding: 10px;
 }
 
 iframe {
@@ -129,7 +182,7 @@ iframe {
 }
 
 .telescope {
-  max-width: 700px;
+  max-width: 100%;
 }
 
 .telescope-caption {
@@ -137,18 +190,20 @@ iframe {
   text-align: left;
   font-size: 14px;
   padding-bottom: 15px;
-  width: 700px;
+  width: 100%;
 }
 
-p,
+p {
+  text-align: left;
+}
+
 .text {
   padding-top: 5px;
   padding-bottom: 5px;
-  max-width: 600px;
-  min-width: 500px;
+  max-width: 35%;
+  min-width: 10%;
   margin: auto;
-  text-align: left;
-  font-size: 1.25rem;
+  font-size: 1.35rem;
   line-height: 1.875rem;
 }
 
@@ -158,13 +213,17 @@ p,
 
 .text-title {
   font-weight: bold;
-  text-align: left;
+}
+
+.text-title h4{
+  
 }
 
 .end-text {
   text-align: left;
   font-size: 12px;
   line-height: normal;
+  padding-bottom: 20px;
 }
 
 footer {
@@ -172,12 +231,7 @@ footer {
   margin: 0 auto;
 }
 
-.footer-logo {
-  float: left;
-}
-
 .footer-home {
-  float: right;
   font-size: 12px;
   color: rgb(129, 129, 129);
 }
@@ -196,14 +250,12 @@ footer {
 }
 
 .topleftnav {
-  float: left;
   display: flex;
   align-content: space-between;
   padding-left: 6%;
 }
 
 .toprightnav {
-  float: right;
   display: inline;
   padding-right: 6%;
 }
@@ -221,6 +273,10 @@ footer {
 .inflation-left-bottom {
   padding: 0;
   text-align: left;
+}
+
+.article-pic {
+  width: 80px;
 }
 
 .inflation-left-top {
