--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,18 @@ a {
   text-decoration: none;
 }
 
-a :hover {
-  text-decoration: initial;
-}
-
 hr {
   border: 0;
   border-top: 1px solid rgb(231, 229, 229);
   margin-bottom: 0;
+}
+
+.pic-style-20 {
+  width: 20px;
+}
+
+.pic-style-200 {
+  width: 200px;
 }
 
 .big-buttons {
@@ -48,11 +52,16 @@ hr {
   font-size: 12px;
   padding: 0 30px;
 }
+.suggested {
+  border-top: 1px solid black;
+  width: 1000px;
+}
 
 .article-master {
   justify-content: space-between;
-  width: 66%;
-  margin: 0 auto;
+  width: 1000px;
+  margin: 30px 0 30px 0;
+  border-top: 1px solid black;
 }
 
 .article-buttons {
@@ -60,6 +69,8 @@ hr {
   width: 250px;
   padding: 15px;
   text-align: left;
+  margin-top: 60px;
+  
 }
 
 .social-master {
@@ -166,6 +177,7 @@ aside a {
 
 .lower-logo-bar {
   padding-top: 20px;
+  
 }
 
 .lower-logo-bar img {
@@ -227,7 +239,9 @@ p {
 
 footer {
   width: 1200px;
-  margin: 0 auto;
+  margin: 0 0;
+  padding: 0;
+  align-content: space-between;
 }
 
 .footer-home {
@@ -274,8 +288,45 @@ footer {
   text-align: left;
 }
 
+.space-top {
+  border-top: 1px solid black;
+  width: 1000px;
+}
+
+.space-row {
+  width: 1000px;
+  justify-content: space-between;
+}
+
 .article-pic {
   width: 80px;
+}
+
+.article-pic-lower {
+  width: 100%;
+}
+
+.space-article-tab {
+  max-width: 1000px;
+  
+}
+
+.space-article {
+  font-size: 14px;
+  border: 1px solid black;
+  width: 300px;
+  justify-content: space-between;
+}
+
+.most-popular-list {
+  max-width: 400px;
+  float: right;
+}
+
+.most-popular {
+  font-size: 18px;
+  border-top: 1px solid rgb(231, 229, 229);
+  font-weight: normal;
 }
 
 .inflation-left-top {
