--- a/styles.css
+++ b/styles.css
@@ -281,7 +281,8 @@ footer {
   top: 0;
 }
 
-.inflation-left-top, .inflation-left-bottom {
+.inflation-left-top,
+.inflation-left-bottom {
   padding: 0;
   text-align: left;
 }
